// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`event-check caches result of /app 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "Your app is attempting to listen to the \\"team.created\\" event, but your GitHub App is not subscribed to the \\"team\\" event.",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`event-check warn user when listening to unsubscribed event 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "Your app is attempting to listen to the \\"an-unsubscribed-event.action\\" event, but your GitHub App is not subscribed to the \\"an-unsubscribed-event\\" event.",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`event-check warn user when unable to retrieve app metadata 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "Probot is unable to retrieve app information from GitHub for event subscription verification.

If this error persists, feel free to report an issue at:
  - https://github.com/probot/probot/issues",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
